--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container">
       <h2>Why We Started: Watch the Project HOPE Story</h2>
       <div class="video-embed-container">
-        <iframe width="100%" height="500" src="YOUR_VIDEO_URL_HERE" 
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/" 
                 title="Project HOPE Explainer Video" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
