--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'fr,es,de,it,pt,zh-CN,ja,ko,hi,bn,ta,ar',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
   </head>
 
 <body>
   
   <header class="hero" id="hero-section">
+    <div class="hero-overlay"></div>
     <div class="hero-content container">
       <div class="main-cta-area">
         <h1><span class="blood-red">🩸</span> Stop Period Poverty. $10 Keeps a Girl in School for 3 to 5 Years!</h1>
@@ -139,7 +151,7 @@
       <div class="solution-gallery">
         <img src="assets/pad-kit.png" alt="Full reusable pad kit contents" />
         <img src="assets/pad-real.jpg" alt="Reusable pad product photo" />
-        <img src="assets/pads-infographics.png" alt="Reusable pad kit infographic benefits" />
+        <img src="assets/pads-infographics.jpg" alt="Reusable pad kit infographic benefits" />
       </div>
       <p class="solution-key-metric">Each kit includes 4 reusable pads, 1 washable pouch, soap, drying string, and a hygiene leaflet. <strong>$10 = 1 reusable kit for 3–5 years of dignity and education.</strong></p>
     </div>
@@ -191,7 +203,7 @@
       <p class="note">All incoming donations will be converted to USDT (BEP-20) in our verified Binance account for transparency and easy disbursement.</p>
       
       <div class="binance-proof-container">
-          <img src="assets/binance-verified-plus.png" alt="Binance Verified Plus Account Proof" class="binance-proof-img" />
+          <img src="assets/proof/binance-verified-plus.png" alt="Binance Verified Plus Account Proof" class="binance-proof-img" />
       </div>
     </div>
   </section>
@@ -201,7 +213,7 @@
       <h2>From 35% Absenteeism to 10% — The Power of a Kit</h2>
       <div class="impact-layout">
         <div class="impact-image">
-          <img src="assets/impact.jpg" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
+          <img src="assets/impact/impact.png" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
         </div>
         <div class="impact-text">
             <blockquote class="burnt-orange-quote">“Right now, at this very moment, not dozens or hundreds, but thousands of schoolgirls are absent. They are not sick; they are sidelined. You have the power to change this with a single, transparent crypto donation.”</blockquote>
