--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="solution-gallery">
         <img src="assets/pad-kit.png" alt="Full reusable pad kit contents" />
         <img src="assets/pad-real.jpg" alt="Reusable pad product photo" />
-        <img src="assets/Pads-Infographics.png" alt="Reusable pad kit infographic benefits" />
+        <img src="assets/pads-info.png" alt="Reusable pad kit infographic benefits" />
       </div>
       <p class="solution-key-metric">Each kit includes 4 reusable pads, 1 washable pouch, soap, drying string, and a hygiene leaflet. <strong>$10 = 1 reusable kit for 3–5 years of dignity and education.</strong></p>
     </div>
@@ -213,7 +213,7 @@
       <h2>From 35% Absenteeism to 10% — The Power of a Kit</h2>
       <div class="impact-layout">
         <div class="impact-image">
-          <img src="assets/impact.png" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
+          <img src="assets/impact.jpg" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
         </div>
         <div class="impact-text">
             <blockquote class="burnt-orange-quote">“Right now, at this very moment, not dozens or hundreds, but thousands of schoolgirls are absent. They are not sick; they are sidelined. You have the power to change this with a single, transparent crypto donation.”</blockquote>
