--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="solution-gallery">
         <img src="assets/pad-kit.png" alt="Full reusable pad kit contents" />
         <img src="assets/pad-real.jpg" alt="Reusable pad product photo" />
-        <img src="assets/pads-info.png" alt="Reusable pad kit infographic benefits" />
+        <img src="assets/Pads-Infographics.png" alt="Reusable pad kit infographic benefits" />
       </div>
       <p class="solution-key-metric">Each kit includes 4 reusable pads, 1 washable pouch, soap, drying string, and a hygiene leaflet. <strong>$10 = 1 reusable kit for 3–5 years of dignity and education.</strong></p>
     </div>
