--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <h2>From 35% Absenteeism to 10% — The Power of a Kit</h2>
       <div class="impact-layout">
         <div class="impact-image">
-          <img src="assets/impact.jpg" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
+          <img src="assets/impact.png" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
         </div>
         <div class="impact-text">
             <blockquote class="burnt-orange-quote">“Right now, at this very moment, not dozens or hundreds, but thousands of schoolgirls are absent. They are not sick; they are sidelined. You have the power to change this with a single, transparent crypto donation.”</blockquote>
@@ -272,4 +272,5 @@
 
 </body>
 </html>
+
 
