--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
             <p>Then came the heart-stopping detail that truly shattered me: Her mother, a street vendor battling just to put food on the table for three kids, could never afford such a fundamental "luxury" as sanitary pads. When I inquired what she usually uses, she whispered, “Old clothing, which won't even properly soak.” My heart, as a father to a daughter, crumbled. I got emotional.</p>
 
-            <p>Immediately, I led her to the nearest shop and bought her two stacks of pads. It was a simple transaction—a few dollars for her supplies. But the way she looked at me, the quiet, profound intensity with which she whispered her thanks—it was as if I hadn't just saved her school days, but had gifted her a whole new life. It was a dignity returned, a future salvaged, and it shook me to my core.</p>
+            <p>Immediately, I led her to the nearest shop and bought her two stacks of pads. It was a simple transaction—a few money for her supplies. But the way she looked at me, the quiet, profound intensity with which she whispered her thanks—it was as if I hadn't just saved her school days, but had gifted her a whole new life. It was a dignity returned, a future salvaged, and it shook me to my core.</p>
             
-            <p>Alem's tears drove me to dig deeper into this social crisis. What I uncovered was a brutal and universal truth: Her story is not an exception; it is a devastating reality for millions of girls in Ethiopia. They are forced into an impossible, heartbreaking choice between their basic human dignity and the right to an education.</p>
+            <p>Alem's tears drove me to dig deeper into this social crisis. What I uncovered was a brutal and universal truth: Her story is not an exception; it is a devastating reality for millions of girls in Ethiopia as well as in Africa. They are forced into an impossible, heartbreaking choice between their basic human dignity and the right to an education.</p>
             
             <p>We cannot let an incident of biology dictate the future of our daughters. Join Project HOPE. Donate $10 and give a girl her dignity and her education back for three to five years.</p>
           </article>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
