--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="stat-card">
           <p class="stat-number">50% MISS SCHOOL</p>
-          <p class="stat-text">A staggering **50% of schoolgirls** miss between **1 and 4 days of school** every month due to inability to manage their periods.</p>
+          <p class="stat-text">A staggering **50% of schoolgirls** miss between **1 and 4 days of school** every month & 63 day per year on average due to inability to manage their periods.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">67% LACK KNOWLEDGE</p>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
