--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <section id="transparency" class="transparency">
     <div class="container">
       <h2>Transparency You Can Trust</h2>
-      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) — our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
+      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) and **secured in a multi-signature wallet** — our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
       
       <div class="embed-wrap">
         <iframe class="dune-frame" src="https://dune.com/embeds/5947907/9599307" title="Dune Analytics - Project HOPE"></iframe>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
