--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
   <section id="community" class="community">
     <div class="container">
       <h2>Join Our Community</h2>
-      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</p>
+      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.We will also update our donors and community members through this mediums</p>
       <div class="social-row">
-        <a href="https://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
+        <a href="https://@ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
         <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
         <a href="https://www.reddit.com/user/ProjectHope_Official" aria-label="Reddit" target="_blank">Reddit</a>
         <a href="https://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
