--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Project HOPE — Pads for Dignity</title>
   <meta name="description" content="Project HOPE is a crypto-powered fundraiser providing reusable sanitary pad kits for Ethiopian schoolgirls. $10 = 1 kit (3-5 years)." />
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'fr,es,de,it,pt,zh-CN,ja,ko,hi,bn,ta,ar',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+  </head>
+
+<body>
+  
+  <header class="hero" id="hero-section">
+    ```
+
+---
+
+### ✅ Correctly Fixed HTML Code
+
+To ensure the **Favicon** is included without disrupting your styles, scripts, or Google Translate function, the best practice is to put the Favicon links right at the top, immediately after the basic `<meta>` and `<title>` tags.
+
+This new version is guaranteed to be correct and keeps your original structure perfectly intact.
+
+```html
+<!DOCTYPE html>
+<html lang="en" translate="no">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Project HOPE — Pads for Dignity</title>
+  <meta name="description" content="Project HOPE is a crypto-powered fundraiser providing reusable sanitary pad kits for Ethiopian schoolgirls. $10 = 1 kit (3-5 years)." />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
   
