--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <section id="transparency" class="transparency">
     <div class="container">
       <h2>Transparency You Can Trust</h2>
-      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) — our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
+      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) and ** Secured in a multi-signature wallet** — our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
       
       <div class="embed-wrap">
         <iframe class="dune-frame" src="https://dune.com/embeds/5947907/9599307" title="Dune Analytics - Project HOPE"></iframe>
@@ -256,7 +256,8 @@
   <section id="community" class="community">
     <div class="container">
       <h2>Join Our Community</h2>
-      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</p>
+      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</p><br>
+      <p>We will also update our donors and community members through this mediums.</p>
       <div class="social-row">
         <a href="https://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
         <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
@@ -277,3 +278,4 @@
 
 </body>
 </html>
+
