--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
   <section id="community" class="community">
     <div class="container">
       <h2>Join Our Community</h2>
-      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</p><br>
-      <p>We will also update our donors and community members through this mediums.</p>
+      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.<br>
+      We will also update our donors and community members through this mediums.</p>
       <div class="social-row">
         <a href="https://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
         <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
@@ -278,4 +278,5 @@
 
 </body>
 </html>
+
 
