--- a/index.html
+++ b/index.html
@@ -111,9 +111,16 @@
     <div class="container">
       <h2>Why We Started: Watch the Project HOPE Story</h2>
       <div class="video-embed-container">
-        <iframe width="100%" height="500" src="https://www.youtube.com/embed/" 
-                title="Project HOPE Explainer Video" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/Z8QK89sTWSo?si=sM2HyEBUtDZfoeYR" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+        </iframe>
       </div>
     </div>
   </section>
@@ -278,5 +285,6 @@
 
 </body>
 </html>
+
 
 
