--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <img src="assets/partners/mariam-products.png" alt="Mariam Seba Products Factory">
         </a>
         
-        <a href="projectHOPE2025.github.io" target="_blank" class="partner-logo-link">
+        <a href="project-hope2025.org" target="_blank" class="partner-logo-link">
             <img src="assets/partners/project-hope.png" alt="Project HOPE Initiative">
         </a>
         
@@ -285,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
