--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
       <div class="social-row">
         <a href="https://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
         <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
-        <a href="https://www.reddit.com/user/ProjectHope_Official" aria-label="Reddit" target="_blank">Reddit</a>
+        <a href="https://instagram.com/project_hope2025" aria-label="Instagram" target="_blank">Instagram</a>
         <a href="https://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
         <a href="https://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
         <a href="https://wa.me/251708129279" aria-label="WhatsApp" target="_blank">WhatsApp</a>
-        <a href="mailto:projecthopefund@gmail.com" aria-label="Email">Email</a>
+        <a href="mailto:info@project_hope2025.org" aria-label="Email">Email</a>
       </div>
     </div>
   </section>
@@ -285,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
