--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     <div class="hero-overlay"></div>
     <div class="hero-content container">
       <div class="main-cta-area">
+        <!-- CRITICAL CORRECTION: The heart/blood drop icon in the H1 remains its default color (white) -->
         <h1><span class="heart-icon">❤️</span> Stop Period Poverty. $10 Keeps a Girl in School for 3 to 5 Years!</h1>
         <p class="lead">Nearly 3 million Ethiopian schoolgirls miss school due to period poverty. Join the movement — restore dignity, empower education.</p>
 
         <div class="hero-buttons">
-          <!-- CTA 1: Red Heart -->
+          <!-- CTA 1: Heart in the button is styled Burnt Orange via CSS -->
           <a class="btn btn-primary" href="#donate">❤️ Donate Now</a>
           <a class="btn btn-secondary" href="#video">▶ Watch Video</a>
         </div>
@@ -137,9 +138,7 @@
           <article class="alem-story-article">
             <p>It was just an ordinary late morning, the kind you forget as soon as it passes. But then, I saw her, and that moment became permanently etched into my soul.</p>
 
-            <p>She is just 16 years old, a schoolgirl named Alem, walking a familiar path home. Only, nothing about this walk was normal. She moved with a desperate, hunched anxiety, using her worn school textbook—a symbol of her future—to frantically shield a dark, undeniable stain of shame on her uniform. Her face was a frozen mask of pure, devastating humiliation.</p>
-
-            <p>I had to stop. As a father, I knew instinctively: something was terribly wrong. When I asked, simply, if she was okay, the fragile dam holding her composure broke. The tears came—fast, and silent. She confessed that her period had begun in class. Because she had no sanitary protection, her uniform was visibly ruined. The cruel, immediate laughter of her classmates had driven her from the room. She was then walking over a mile back home, a public spectacle of a completely natural process, knowing that this moment of shame meant more than just a ruined day: she would now miss an entire week of school.</p>
+            <p>She is just 16 years old, a schoolgirl named Alem, walking a familiar path home. Only, nothing about this walk was normal. She moved with a desperate, hunched anxiety, using her worn school textbook—a symbol of her future—to frantically shield a dark, undeniable stain of shame on her uniform. Her period had begun in class. Her face was a frozen mask of pure, devastating humiliation. The cruel, immediate laughter of her classmates had driven her from the room. She was then walking over a mile back home, a public spectacle of a completely natural process, knowing that this moment of shame meant more than just a ruined day: she would now miss an entire week of school.</p>
 
             <p>Then came the heart-stopping detail that truly shattered me: Her mother, a street vendor battling just to put food on the table for three kids, could never afford such a fundamental "luxury" as sanitary pads. When I inquired what she usually uses, she whispered, “Old clothing, which won't even properly soak.” My heart, as a father to a daughter, crumbled. I got emotional.</p>
             
@@ -167,11 +166,11 @@
         <!-- START: ITEM 3 - UPDATED STATS -->
         <div class="stat-card">
           <p class="stat-number">52.69% HAVE SAFE MHM</p>
-          <p class="stat-text">A systematic review found that only about 52.69% of adolescent girls in Ethiopia have safe menstrual hygiene practices.</p>
+          <p class="stat-text">A systematic review found that only about **52.69%** of adolescent girls in Ethiopia have safe menstrual hygiene practices.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">32% MISS SCHOOL DAYS</p>
-          <p class="stat-text">In some studies, around 32% of girls reported missing one or more school days during menstruation.</p>
+          <p class="stat-text">In some studies, around **32%** of girls reported missing one or more school days during menstruation.</p>
         </div>
         <!-- END: ITEM 3 - UPDATED STATS -->
         <div class="stat-card">
@@ -182,7 +181,7 @@
         <!-- START: ITEM 3 - UPDATED STAT -->
         <div class="stat-card">
           <p class="stat-number">1.3 MILLION MONTHLY ABSENTEES</p>
-          <p class="stat-text">A UK-documented report noted: “In Ethiopia … approximately 1 in 10 girls miss school due to their period, which equates to ~1.3 million girls each month.”</p>
+          <p class="stat-text">A UK-documented report noted: “In Ethiopia … approximately **1 in 10 girls miss school** due to their period, which equates to **~1.3 million girls each month**.”</p>
         </div>
         <!-- END: ITEM 3 - UPDATED STAT -->
         <div class="stat-card">
@@ -236,10 +235,12 @@
       <h2>Support Project HOPE — Donate in Crypto</h2>
       <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. (All incoming donations are converted to USDT BEP-20.)</p>
 
+      <!-- CRITICAL CORRECTION: Wallet grid restored to original layout (4 columns on desktop) -->
       <div class="wallet-grid">
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-bep20.png" alt="USDT BEP-20 QR"><div class="wallet-label">USDT (BEP-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **BEP-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-trc20.png" alt="USDT TRC-20 QR"><div class="wallet-label">USDT (TRC-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **TRC-20**</p><button class="copy-btn" data-address="TUnuHBye1Nz474RzBHxYUSoK8a5VGycBjU">Copy address</button></div>
-        <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-erc20.png" alt="USDT (ERC-20) QR"><div class="wallet-label">USDT (ERC-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **ERC-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
+        <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-erc20.png" alt="USDT (ERC-20) QR"><div class="wallet-label">USDT (ERC-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **ERC-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button>
+        </div>
         <div class="wallet-card"><img src="assets/qrcodes/qr-btc.png" alt="BTC QR"><div class="wallet-label">BTC</div><p class="wallet-warning">⚠️ Send only **BTC** on **Bitcoin**</p><button class="copy-btn" data-address="Bc1qkkrh8t7fezlkfa3r7fz7kxnllhxvzxxxfud84v">Copy address</button></div>
         
         <div class="wallet-card"><img src="assets/qrcodes/qr-eth.png" alt="ETH QR"><div class="wallet-label">ETH</div><p class="wallet-warning">⚠️ Send only **ETH** on **Ethereum**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
@@ -270,6 +271,7 @@
           <img src="assets/impact.png" alt="Three schoolgirls holding textbooks, representing hope and dignity." />
         </div>
         <div class="impact-text">
+            <!-- This quote uses the burnt orange color -->
             <blockquote class="burnt-orange-quote">“Right now, at this very moment, not dozens or hundreds, but thousands of schoolgirls are absent. They are not sick; they are sidelined. You have the power to change this with a single, transparent crypto donation.”</blockquote>
             <p>For just <strong>$10,</strong> Project HOPE provides a girl with a <strong>reusable pad kit</strong> that lasts for **3–5 years**. This simple investment translates directly to a massive social return: a **70% reduction in school absenteeism** among the girls we serve. By restoring dignity, we ensure these students can stay in class, complete their education, and secure their economic future. Every transaction you make is a human story transformed—a girl staying in school.</p>
         </div>
