--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <!-- Card 3: Progress -->
         <div class="metric-card progress-card">
           <p class="progress-label">Girls Supported So Far:</p>
-          <!-- This number will be updated by JS -->
-          <p class="progress-number" id="girls-supported">10,000</p> 
+          <!-- This number is now set manually in HTML. JS just formats it. -->
+          <p class="progress-number" id="girls-supported">10</p> 
           <p class="progress-subtext">($10 = 1 Girl)</p>
         </div>
 
@@ -312,4 +312,5 @@
 
 </body>
 </html>
+
 
