--- a/index.html
+++ b/index.html
@@ -309,9 +309,14 @@
       <p>© 2025 Project HOPE — Pads for Dignity | Built for Transparency | Powered by Crypto 🌍</p>
     </div>
   </footer>
+  <!-- Floating Donate Now Button -->
+<a href="#donate" class="donate-float-btn">
+  ❤️ Donate Now
+</a>
 
 </body>
 </html>
+
 
 
 
