--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="hero-content container">
       <div class="main-cta-area">
         <h1><span class="blood-red">🩸</span> Stop Period Poverty. $10 Keeps a Girl in School for 3 to 5 Years!</h1>
-        <p class="lead">Nearly 3 million Ethiopian schoolgirls miss school due to period poverty. Join the movement — restore dignity, empower education.</p>
+        <p class="lead">An estimated 3 million Ethiopian schoolgirls face period poverty that disrupts their education. (Source: UNICEF Ethiopia (2024). Join the movement — restore dignity, empower education.</p>
 
         <div class="hero-buttons">
           <a class="btn btn-primary" href="#donate">❤️ Donate Now</a>
@@ -316,6 +316,7 @@
 
 </body>
 </html>
+
 
 
 
