--- a/index.html
+++ b/index.html
@@ -158,20 +158,20 @@
       <h2>The Devastating Reality of Period Poverty in Ethiopia</h2>
       <div class="stats-grid">
         <div class="stat-card">
-          <p class="stat-number">75% LACK ACCESS</p>
-          <p class="stat-text">Up to **75% of Ethiopian girls and women** do not have access to proper menstrual products, often using unhygienic alternatives.</p>
+          <p class="stat-number">48% LACK ACCESS</p>
+          <p class="stat-text">A systematic review found that only about 52.69% of adolescent girls in Ethiopia have safe menstrual hygiene practices.</p>
         </div>
         <div class="stat-card">
-          <p class="stat-number">50% MISS SCHOOL</p>
-          <p class="stat-text">A staggering **50% of schoolgirls** miss between **1 and 4 days of school** every month due to inability to manage their periods.</p>
+          <p class="stat-number">32% MISS SCHOOL</p>
+          <p class="stat-text">In some studies a staggering **32% of schoolgirls** miss between **1 and 4 days of school** every month due to inability to manage their periods.</p>
+        </div>
+        <div class="stat-card">
+          <p class="stat-number">1.3 Million Each Month</p>
+          <p class="stat-text">A UK-documented report noted: “In Ethiopia … approximately 1 in 10 girls miss school due to their period, which equates to ~1.3 million girls each month.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">67% LACK KNOWLEDGE</p>
           <p class="stat-text">**67% of girls** in Ethiopia report that they **do not receive knowledge or education** about puberty and menstrual health before menarche.</p>
-        </div>
-        <div class="stat-card">
-          <p class="stat-number">3 MILLION AFFECTED</p>
-          <p class="stat-text">Nearly **3 million Ethiopian schoolgirls** are affected by period poverty, severely limiting their educational opportunities.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">WASH FAILURE</p>
@@ -316,6 +316,7 @@
 
 </body>
 </html>
+
 
 
 
