--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
       <h2>Our Solution — Reusable Pad Kits That Last 3–5 Years</h2>
       <div class="solution-gallery">
         <img src="assets/pad-kit.png" alt="Full reusable pad kit contents" />
-        <img src="assets.
-/pad-real.jpg" alt="Reusable pad product photo" />
+        <img src="assets/pad-real.jpg" alt="Reusable pad product photo" />
         <img src="assets/pads-info.jpg" alt="Reusable pad kit infographic benefits" />
       </div>
       <p class="solution-key-metric">Each kit includes 4 reusable pads, 1 washable pouch, soap, drying string, and a hygiene leaflet. <strong>$10 = 1 reusable kit for 3–5 years of dignity and education.</strong></p>
@@ -333,3 +332,4 @@
 
 </body>
 </html>
+
