--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <p>She is just 16 years old, a schoolgirl named Alem, walking a familiar path home. Only, nothing about this walk was normal. She moved with a desperate, hunched anxiety, using her worn school textbook—a symbol of her future—to frantically shield a dark, undeniable stain of shame on her uniform. Her face was a frozen mask of pure, devastating humiliation.</p>
             <p>I had to stop. As a father, I knew instinctively: something was terribly wrong. When I asked, simply, if she was okay, the fragile dam holding her composure broke. The tears came—fast, and silent. She confessed that her period had begun in class. Because she had no sanitary protection, her uniform was visibly ruined. The cruel, immediate laughter of her classmates had driven her from the room. She was then walking over a mile back home, a public spectacle of a completely natural process, knowing that this moment of shame meant more than just a ruined day: she would now miss an entire week of school.</p>
             <p>Then came the heart-stopping detail that truly shattered me: Her mother, a street vendor battling just to put food on the table for three kids, could never afford such a fundamental "luxury" as sanitary pads. When I inquired what she usually uses, she whispered, “Old clothing, which won't even properly soak.” My heart, as a father to a daughter, crumbled. I got emotional.</p>
-            <p>Immediately, I led her to the nearest shop and bought her two stacks of pads. It was a simple transaction—a few dollars for her supplies. But the way she looked at me, the quiet, profound intensity with which she whispered her thanks—it was as if I hadn't just saved her school days, but had gifted her a whole new life. It was a dignity returned, a future salvaged, and it shook me to my core.</p>
-            <p>Alem's tears drove me to dig deeper into this social crisis. What I uncovered was a brutal and universal truth: Her story is not an exception; it is a devastating reality for millions of girls in Ethiopia. They are forced into an impossible, heartbreaking choice between their basic human dignity and the right to an education.</p>
+            <p>Immediately, I led her to the nearest shop and bought her two stacks of pads. It was a simple transaction—a few money for her supplies. But the way she looked at me, the quiet, profound intensity with which she whispered her thanks—it was as if I hadn't just saved her school days, but had gifted her a whole new life. It was a dignity returned, a future salvaged, and it shook me to my core.</p>
+            <p>Alem's tears drove me to dig deeper into this social crisis. What I uncovered was a brutal and universal truth: Her story is not an exception; it is a devastating reality for millions of girls in Ethiopia and a challenge faced by millions of girls in Africa. They are forced into an impossible, heartbreaking choice between their basic human dignity and the right to an education.</p>
             <p>We cannot let an incident of biology dictate the future of our daughters. Join Project HOPE. Donate $10 and give a girl her dignity and her education back for three to five years.</p>
           </article>
         </div>
@@ -332,4 +332,5 @@
 
 </body>
 </html>
+
 
