--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <!-- Card 3: Progress (MODIFIED) -->
         <div class="metric-card progress-card">
-          <p class="progress-label">Girls Supported So Far:</p>
+          <p class="progress-label">Girls Supported Progress Bar:</p>
           <!-- This number is now set manually in HTML. JS just formats it. -->
           <p class="progress-number" id="girls-supported">1788</p> 
           <!-- MODIFICATION: Replaced subtext with progress bar -->
@@ -332,6 +332,7 @@
 
 </body>
 </html>
+
 
 
 
