--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <p>🛑 **CRITICAL WARNING:** To prevent permanent loss of funds, you **MUST** ensure the crypto type and network (e.g., USDT BEP-20) match the specific address/QR code below. Donating the wrong coin or network will result in a lost donation. **Always double-check!**</p>
       </div>
       <h2>Support Project HOPE — Donate in Crypto</h2>
-      <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. Also be informed that so as to avoid volitility and use the funds you donate to it cause without lossing its value, our main Donation wallet is USDT BEP20</p>
+      <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. Also, be informed that to avoid volatility and ensure that your donated funds are used for their intended cause without losing value, our main donation wallet is USDT (BEP-20).</p>
 
       <div class="wallet-grid">
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-bep20.png" alt="USDT BEP-20 QR"><div class="wallet-label">USDT (BEP-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **BEP-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
@@ -332,6 +332,7 @@
 
 </body>
 </html>
+
 
 
 
