--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
   <section id="donate" class="donate">
     <div class="container">
       <div class="crypto-safety-alert">
-        <p>🛑 **CRITICAL WARNING:** To prevent permanent loss of funds, you **MUST** ensure the crypto type and network (e.g., USDT BEP-20) match the specific address/QR code below. Donating the wrong coin or network will result in a lost donation. **Always double-check!**</p>
+        <p>🛑 **CRITICAL WARNING:** To avoid permanent loss of funds, please ensure that the cryptocurrency type and network (e.g., USDT BEP-20) exactly match the address or QR code shown below.
+Transactions sent using the wrong network cannot be recovered.
+Always verify before sending.</p>
       </div>
       <h2>Support Project HOPE — Donate in Crypto</h2>
       <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. Also, be informed that to avoid volatility and ensure that your donated funds are used for their intended cause without losing value, our main donation wallet is USDT (BEP-20).</p>
@@ -332,6 +334,7 @@
 
 </body>
 </html>
+
 
 
 
