--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ Always verify before sending.</p>
         <a href="httpsIs://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
         <a href="https://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
         <a href="https://wa.me/251708129279" aria-label="WhatsApp" target="_blank">WhatsApp</a>
-        <a href="mailto:projecthopefund@gmail.com" aria-label="Email">Email</a>
+        <a href="mailto:info@project-hope2025.org" aria-label="Email">Email</a>
       </div>
     </div>
   </section>
@@ -334,6 +334,7 @@ Always verify before sending.</p>
 
 </body>
 </html>
+
 
 
 
