--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="stat-card">
           <p class="stat-number">32% MISS SCHOOL</p>
-          <p class="stat-text">In some studies a staggering **32% of schoolgirls** miss between **1 and 4 days of school** every month due to inability to manage their periods.</p>
+          <p class="stat-text">In some studies a staggering **32% of schoolgirls** miss between 1 and 4 days of school every month & 63 days per year due to inability to manage their periods.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">1.3 Million Each Month</p>
@@ -334,6 +334,7 @@ Always verify before sending.</p>
 
 </body>
 </html>
+
 
 
 
