--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Always verify before sending.</p>
             <img src="assets/partners/mariam-products.png" alt="Mariam Seba Products Factory">
         </a>
         
-        <a href="projectHOPE2025.github.io" target="_blank" class="partner-logo-link">
+        <a href="project-hope2025.org" target="_blank" class="partner-logo-link">
             <img src="assets/partners/project-hope.png" alt="Project HOPE Initiative">
         </a>
         
@@ -334,6 +334,7 @@ Always verify before sending.</p>
 
 </body>
 </html>
+
 
 
 
