--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
         <!-- Card 3: Progress (MODIFIED) -->
         <div class="metric-card progress-card">
-          <p class="progress-label">Girls Supported Progress Bar:</p>
+          <p class="progress-label">Live</br>Supported Girls Progress Bar:</p>
           <!-- This number is now set manually in HTML. JS just formats it. -->
-          <p class="progress-number" id="girls-supported">11788</p> 
+          <p class="progress-number" id="girls-supported">1788</p> 
           <!-- MODIFICATION: Replaced subtext with progress bar -->
           <div class="progress-bar-container">
             <div class="progress-bar-inner" id="progress-bar-inner"></div>
@@ -340,5 +340,6 @@
 
 </body>
 </html>
+
 
 
