--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Always verify before sending **Always double-check!**</p>
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-polygon.png" alt="USDT (Polygon) QR"><div class="wallet-label">USDT (Polygon)</div><p class="wallet-warning">⚠️ Send only **USDT** on **Polygon**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
       </div>
       
-      <p class="note">All incoming donations will be converted to USDT (BEP-20) in our verified Binance account for transparency and easy disbursement.</p>
+      <p class="note">All incoming crypto donations are securely converted to USD in our verified Binance account to ensure full transparency and facilitate the efficient purchase and distribution of reusable pad kits.</p>
       
       <div class="binance-proof-container">
           <img src="assets/proof/binance-ver.png" alt="Verified by Binance Proof+" class="binance-verified-badge" />
@@ -342,6 +342,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
