--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Transactions sent using the wrong network cannot be recovered.
 Always verify before sending **Always double-check!**</p>
       </div>
       <h2>Support Project HOPE — Donate in Crypto</h2>
-      <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. (All incoming donations are converted to USDT BEP-20.)</p>
+      <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. Also, be informed that to avoid volatility and ensure that your donated funds are used for their intended cause without losing value, our main donation wallet is USDT (BEP-20).</p>
 
       <div class="wallet-grid">
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-bep20.png" alt="USDT BEP-20 QR"><div class="wallet-label">USDT (BEP-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **BEP-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
@@ -342,6 +342,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
