--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ Always verify before sending **Always double-check!**</p>
   <section id="community" class="community">
     <div class="container">
       <h2>Join Our Community</h2>
-      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</br>We will also update our donors & community members through these mediums</p>
+      <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</br>We will also update our donors & community members through these mediums.</p>
       <div class="social-row">
         <a href="httpss://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
         <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
@@ -342,6 +342,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
