--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <section id="transparency" class="transparency">
     <div class="container">
       <h2>Transparency You Can Trust</h2>
-      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) and **secured in a Multi-Signature Wallet by a board of five members**- our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
+      <p class="lead-text-bold"><strong>All donated crypto is consolidated and converted to USDT (BEP-20) and **secured in a Multi-Signature Wallet controlled by a board of five members**- our primary reserve for withdrawals and disbursements. Track every dollar, every kit, live.</strong></p>
       
       <!-- MODIFICATION: Moved Campaign Verified Badge ABOVE Dune embed -->
       <div class="verified-badge-container">
@@ -342,6 +342,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
