--- a/index.html
+++ b/index.html
@@ -329,14 +329,18 @@ Always verify before sending **Always double-check!**</p>
       <h2>Join Our Community</h2>
       <p>Connect with us on social media to help amplify Project HOPE to the global crypto community.</br>We will also update our donors & community members through these mediums.</p>
       <div class="social-row">
-        <a href="httpss://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
-        <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
-        <a href="https://www.reddit.com/user/ProjectHope_Official" aria-label="Reddit" target="_blank">Reddit</a>
-        <a href="httpsIs://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
-        <a href="https://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
-        <a href="https://wa.me/251708129279" aria-label="WhatsApp" target="_blank">WhatsApp</a>
-        <a href="mailto:projecthopefund@gmail.com" aria-label="Email">Email</a>
-      </div>
+    <!-- FIX: Corrected httpss to https -->
+    <a href="https://t.me/ProjectHope2025" aria-label="Telegram" target="_blank">Telegram</a>
+    <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
+    <!-- NEW: Replaced Reddit with Instagram and the new username -->
+    <a href="https://instagram.com/project_hope2025" aria-label="Instagram" target="_blank">Instagram</a>
+    <!-- FIX: Corrected httpsIs to https -->
+    <a href="https://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
+    <a href="https://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
+    <a href="https://wa.me/251708129279" aria-label="WhatsApp" target="_blank">WhatsApp</a>
+    <a href="mailto:info@project-hope2025.org" aria-label="Email">Email</a>
+</div>
+
     </div>
   </section>
   
@@ -352,3 +356,4 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
