--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <!-- MODIFICATION: Moved Campaign Verified Badge ABOVE Dune embed -->
       <div class="verified-badge-container">
         <img src="assets/campaign.png" alt="Campaign Verified Badge" class="campaign-verified-badge" />
-        <p class="verified-text">Verified Blockchain Campaign — Officially Authenticated by Ethiopian Agency for Civil Society Organizations (ACSO).</p>
+        <p class="verified-text">Verified Blockchain Campaign — Officially Authenticated by Ethiopian Authority for Civil Society Organizations (ACSO).</p>
       </div>
       <!-- END MODIFICATION -->
       
@@ -356,4 +356,5 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
